--- a/Project/web/WEB-INF/web.xml
+++ b/Project/web/WEB-INF/web.xml
@@ -12,6 +12,10 @@
         <servlet-name>AttendanceInsertServlet</servlet-name>
         <servlet-class>Servlet.AttendanceInsertServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AttendanceUpdateServlet</servlet-name>
+        <servlet-class>Servlet.AttendanceUpdateServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>AttendanceServlet</servlet-name>
         <url-pattern>/attend</url-pattern>
@@ -23,6 +27,10 @@
     <servlet-mapping>
         <servlet-name>AttendanceInsertServlet</servlet-name>
         <url-pattern>/insert</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AttendanceUpdateServlet</servlet-name>
+        <url-pattern>/update</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
